@@ -13,13 +13,15 @@ kn broker create NAME
   # Create a broker 'mybroker' in the current namespace
   kn broker create mybroker
 
-  # Create a broker 'mybroker' in the 'myproject' namespace
-  kn broker create mybroker --namespace myproject
+  # Create a broker 'mybroker' in the 'myproject' namespace and with a broker class of 'Kafka'
+  kn broker create mybroker --namespace myproject --broker Kafka
+
 ```
 
 ### Options
 
 ```
+      --class string       Broker class like 'MTChannelBasedBroker' or 'Kafka' (if available)
   -h, --help               help for create
   -n, --namespace string   Specify the namespace to operate in.
 ```
